<resources>
    <string name="app_name">Doize</string>
    <string name="let_s_get_started">Organize your work!</string>
    <string name="login_desc">Sign in with your account to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="birth_date">Birth Date</string>
    <string name="account">Account</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="notifications">Notifications</string>
    <string name="title1">Welcome to Doize!</string>
    <string name="title2">Full Features</string>
    <string name="title3">Simple and Easy</string>
    <string name="desc_title1">Increase your produktivity with Doize</string>
    <string name="desc_title2">Organize your day, create reminders and manage your productive time</string>
    <string name="desc_title3">Organize your day anytime and anywhere easily</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_daily_activity">Add Activity</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="sorry_there_are_no_results">Sorry, there are no results.</string>
    <string name="oopss_no_data_found">Oopss! No data found.</string>
    <string name="search">Search</string>
    <string name="edit_detail_schedule">Edit Detail Schedule</string>
    <string name="delete_detail_schedule">Delete Detail Schedule</string>
    <string name="edit">Edit</string>
    <string name="priority">Priority</string>
    <string name="check_assignment">Check Assignment</string>
    <string name="check_daily_activity">Check Daily Activity</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="course">Course</string>
    <string name="subject">Subject</string>
    <string name="due_time">Due Time</string>
    <string name="due_date">Due Date</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="activity_name">Activity Name</string>
    <string name="settings">Settings</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="task">Task</string>
    <string name="welcome">Welcome,</string>
    <string name="today">Today</string>
    <string name="doize_logo">Doize Logo</string>
    <string name="see_all">See all</string>
    <string name="assignments">Assignments</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="schedule">Schedule</string>
    <string name="home">Home</string>
    <string name="to_do">To Do</string>
    <string name="assignment">Assignment</string>
    <string name="there_are_no_schedules">There are no schedules.</string>
    <string name="schedules">Schedules</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
</resources>