<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@id/scheduleFragment"
        android:enabled="true"
        android:icon="@drawable/ic_calendar_schedule_2"
        android:title="@string/schedule" />
    <item
        android:id="@id/dailyActivityFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/to_do" />
    <item
        android:id="@id/assignmentFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/assignment" />
    <item
        android:id="@id/pomodoroFragment"
        android:enabled="true"
        android:icon="@drawable/ic_timer"
        android:title="@string/pomodoro" />
</menu>